--- a/Customer/src/main/resources/application.properties
+++ b/Customer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Application Server
 server.port=3000
-
+#MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://jmendoza:zuZYkSpMIpSGqgLD@cluster0-7rxkw.mongodb.net/customer?retryWrites=true&w=majority
