--- a/Customer/pom.xml
+++ b/Customer/pom.xml
@@ -53,6 +53,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
