--- a/Customer/src/main/resources/application.properties
+++ b/Customer/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 # Application Server
 server.port=3000
 
-#MongoDB Atlas
+# MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://jmendoza:zuZYkSpMIpSGqgLD@cluster0-7rxkw.mongodb.net/customer?retryWrites=true&w=majority
+
+# Logbook: HTTP request and response logging
+logging.level.org.zalando.logbook = TRACE
