--- a/Customer/src/main/resources/application.properties
+++ b/Customer/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=3000
 
 # MongoDB Atlas
-spring.data.mongodb.uri=mongodb+srv://jmendoza:zuZYkSpMIpSGqgLD@cluster0-7rxkw.mongodb.net/customer?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://jmendoza:zuZYkSpMIpSGqgLD@cluster0-7rxkw.mongodb.net/customer?retryWrites=true&w=majority&connectTimeoutMS=2000
 
 # Logbook: HTTP request and response logging
 logging.level.org.zalando.logbook = TRACE
