Order Microservice: Update CreateOrderUseCase

--- a/Order/src/main/resources/application.properties
+++ b/Order/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=3002
 spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=root.jmtizure.k201
+#spring.jpa.properties.hibernate.default_schema=public
