--- a/Order/pom.xml
+++ b/Order/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>logbook-spring-boot-starter</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
