Order Microservice: Update configuration layer

--- a/Order/configuration/src/main/resources/application.properties
+++ b/Order/configuration/src/main/resources/application.properties
@@ -2,9 +2,17 @@
 server.port=3002
 
 ## Spring DATASOURCE
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=root.jmtizure.k201
+
+spring.datasource.tomcat.initial-size=15
+spring.datasource.tomcat.min-idle=15
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=50
+spring.datasource.tomcat.min-evictable-idle-time-millis=60000
+spring.datasource.tomcat.max-wait=20000
 
 # Logbook: HTTP request and response logging
 logging.level.org.zalando.logbook = TRACE
